--- a/_posts/summarize/2017-02-08-js-kills1.md
+++ b/_posts/summarize/2017-02-08-js-kills1.md
@@ -10,7 +10,7 @@ tag: JavaScript
 {:toc}
 
 
-　　Adobe 一个高级工程师 Dmitry Baranovskiy 在他的[ 博客 ](http://dmitry.baranovskiy.com/)上写了这么一篇博文[ So,you think you know JavaScript? ](http://dmitry.baranovskiy.com/post/91403200)，并在博文中贴出了五个小示例（先不要看我贴的测试结果），大家可以感受一下，看看你是不是学了假的 JavaScript！<!-- more -->
+　　Adobe 一个高级工程师 Dmitry Baranovskiy 在[ 他的博客 ](http://dmitry.baranovskiy.com/)上写了这么一篇博文[ So,you think you know JavaScript? ](http://dmitry.baranovskiy.com/post/91403200)，并在博文中贴出了五个小示例（先不要看我贴的测试结果），大家可以感受一下，看看你是不是学了假的 JavaScript！<!-- more -->
 
 ## 1. 示例展示
 
