--- a/_posts/useful/2017-02-05-mate.md
+++ b/_posts/useful/2017-02-05-mate.md
@@ -67,165 +67,107 @@ tag: HTML
 
 ## 2. 常用 meta 标签总结
 
-- 声明文档使用的字符编码
+### 2.1 name 属性
 
 ```html
-<meta charset="utf-8">
-```
-
-- 关键字，搜所引擎 SEO
-
-```html
-<meta name="keywords" content="关键字1,关键字2,...">  
-```
-
-- 页面描述
-
-```html
-<meta name="description" content="网页描述"> 
-```
-
-- 优先使用 IE 最新版本和 Chrome
-
-```html
-<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
-```
-
-- 屏幕的缩放
-
-```html
-<meta name="viewport" content="width=device-width,height=device-height, user-scalable=no,initial-scale=1, minimum-scale=1, maximum-scale=1,target-densitydpi=device-dpi ">  
-<!-- 
-    width viewport的宽度[device-width | pixel_value]width如果直接设置pixel_value数值，大部分的安卓手机不支持，但是ios支持；
-    height – viewport 的高度 （范围从 223 到 10,000 ）
-    user-scalable [yes | no]是否允许缩放
-    initial-scale [数值] 初始化比例（范围从 > 0 到 10）
-    minimum-scale [数值] 允许缩放的最小比例
-    maximum-scale [数值] 允许缩放的最大比例
-    target-densitydpi 值有以下（一般推荐设置中等响度密度或者低像素密度，后者设置具体的值dpi_value，另外webkit内核已不准备再支持此属性）
-         -- dpi_value 一般是70-400//没英寸像素点的个数
-         -- device-dpi设备默认像素密度
-         -- high-dpi 高像素密度
-         -- medium-dpi 中等像素密度
-         -- low-dpi 低像素密度
- -->
-```
-
-- 强制页面在当前窗口以独立页面显示
-
-```html
-<meta http-equiv="Window-target" content="_top">
-<!-- 用来防止别人在框架里调用自己的页面 -->
-```
-
-- 自动刷新，并指向新的页面
-
-```html
-<meta http-equiv="Refresh" content="2；URL=http://">
-<!-- 停留2秒钟后自动刷新到URL网址 -->
-```
-
-- 禁止浏览器缓存，访问者无法脱机浏览
-
-```html
-<meta http-equiv="pragram" content="no-cache"> 
-<!-- 是用于设定禁止浏览器从本地机的缓存中调阅页面内容，设定后一旦离开网页就无法从Cache中再调出用法 -->
-```
-
-- 清除缓存（再访问这个网站要重新下载！）
-
-```html
-<meta http-equiv="cache-control" content="no-cache, must-revalidate"> 
-```
-
-- 设定网页的到期时间
-
-```html
-<meta http-equiv="expires" content="Fri,12Jan200118:18:18GMT">
-<!-- 必须使用GMT的时间格式 -->
-```
-
-- 设置作者姓名及联系方式
-
-```html
+<!-- 设置作者姓名及联系方式 -->
 <meta name="author" contect="name, xxx@163.com">
+<!-- 页面描述 -->
+<meta name="description" content="meta元素共有三个可选属性(不超过150字符)" />
+<!-- 页面关键词 -->
+<meta name="keywords" content="关键字1,关键字2,..." />
+<!-- 页面生成器 -->
+<meta name="generator" content="hexo" />
+<!-- 页面修改信息 -->
+<meta name="revised" content="story,2015/07/22" />
+<!-- 版权信息 -->
+<meta name="copyright" content="All Rights Reserved" />
+<!-- 页面爬虫设置 -->
+<meta name="robots" content="index,follow" />
+<!-- robots的content取值 -->
+<!-- all：文件将被检索，且页面上的链接可以被查询 -->
+<!-- none：文件将不被检索，且页面上的链接不可以被查询 -->
+<!-- index：文件将被检索 -->
+<!-- follow：页面上的链接可以被查询 -->
+<!-- noindex：文件将不被检索，但页面上的链接可以被查询 -->
+<!-- nofollow：文件将被检索，但页面上的链接不可以被查询 -->
 ```
 
-- 忽略电话号码和邮箱
+### 2.2 http-equiv 属性
 
 ```html
-<meta name="format-detection" content="telphone=no, email=no">  
-<!-- 
- telephone=no: 忽略页面中的数字识别为电话号码
- email=no: 忽略页面中的邮箱格式为邮箱
- -->
+<!-- 字符编码 -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<meta charset="utf-8"><!--简写版-->
+<!-- 页面到期时间，必须使用GMT的时间格式 -->
+<meta http-equiv="expire" content="Wed,22Jul201511:11:11GMT" />
+<!-- 页面重刷新，0秒后刷新并跳转 -->
+<meta http-equiv="refresh" content="0;URL=''" />
+<!-- cookie设置 -->
+<meta http-equiv="set-cookie" content="cookie value=xxx;expires=Wed,22-Jul-201511:11:11GMT；path=/" />
+<!-- 脚本类型 -->
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<!-- 禁止从本地缓存中读取页面 -->
+<meta http-equiv="Pragma" content="no-cache"> 
+<!--清除缓存（再访问这个网站要重新下载！）-->
+<meta http-equiv="cache-control" content="no-cache, must-revalidate"> 
+<!--优先使用 IE 最新版本和 Chrome 内核-->
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
+<!--强制页面在当前窗口以独立页面显示，用来防止别人在框架里调用自己的页面-->
+<meta http-equiv="Window-target" content="_top">
+<!--不让百度转码-->
+<meta http-equiv="Cache-Control" content="no-siteapp">
+
 ```
 
-- 搜索引擎抓取
+### 2.3 移动端
 
 ```html
-<meta name="robots" content="index,follow">
-<!-- 通常有如下几种取值：none，noindex，nofollow，all，index和follow -->
-```
-
-- 启用360浏览器的极速模式(webkit)
-
-```html
+<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
+<!-- viewport的content取值 -->
+<!-- width：宽度（数值 / device-width）（200~10000，默认为980px） -->
+<!-- height：高度（数值 / device-height）（223~10000） -->
+<!-- initial-scale：初始缩放比例 （0~10） -->
+<!-- minimum-scale：允许用户缩放到的最小比例 -->
+<!-- maximum-scale：允许用户缩放到的最大比例 -->
+<!-- user-scalable：是否允许用户缩放 (no/yes)  -->
+ 
+<!-- uc强制竖屏 -->
+<meta name="screen-orientation" content="portrait">
+<!-- QQ强制竖屏 -->
+<meta name="x5-orientation" content="portrait">
+<!-- UC强制全屏 -->
+<meta name="full-screen" content="yes">
+<!-- QQ强制全屏 -->
+<meta name="x5-fullscreen" content="true">
+<!-- UC应用模式 -->
+<meta name="browsermode" content="application">
+<!-- QQ应用模式 -->
+<meta name="x5-page-mode" content="app">
+ 
+<!-- IOS启用 WebApp 全屏模式 -->
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<!-- IOS全屏模式下隐藏状态栏/设置状态栏颜色 content的值为default | black | black-translucent  -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<!-- IOS添加到主屏后的标题 -->
+<meta name="apple-mobile-web-app-title" content="标题">
+<!-- IOS添加智能 App 广告条 Smart App Banner -->
+<meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
+<!--微软的老式浏览器-->
+<meta name="MobileOptimized" content="320">
+<!--针对手持设备优化，主要是针对一些老的不识别 viewport 的浏览器，比如黑莓-->
+<meta name="HandheldFriendly" content="true">
+<!-- 去除iphone 识别数字为号码 -->
+<meta name="format-detection" content="telephone=no">
+<!-- 不识别邮箱 -->
+<meta name="format-detection" content="email=no">
+<!-- 禁止跳转至地图 -->
+<meta name="format-detection" content="adress=no">
+<!-- 可以连写-->
+<meta name="format-detection" content="telephone=no,email=no,adress=no">
+<!--启用360浏览器的极速模式(webkit)-->
 <meta name="renderer" content="webkit">
 ```
 
-- 不让百度转码
-
-```html
-<meta http-equiv="Cache-Control" content="no-siteapp">
-```
-
-- 针对手持设备优化，主要是针对一些老的不识别 viewport 的浏览器，比如黑莓 
-
-```html
-<meta name="HandheldFriendly" content="true">
-```
-
-- 微软的老式浏览器
-
-```html
-<meta name="MobileOptimized" content="320">
-```
-
-- UC 浏览器强制竖屏
-
-```html
-<meta name="screen-orientation" content="portrait">
-```
-
-- UC 浏览器应用模式
-
-```html
-<meta name="browsermode" content="application">
-```
-
-- QQ 浏览器强制全屏
-
-```html
-<meta name="x5-orientation" content="portrait">
-```
-
-- QQ 浏览器应用模式
-
-```html
-<meta name="x5-page-mode" content="app">
-```
-
-- 网站开启对 iphone 私有 web app 程序的支持
-
-```html
-<meta content="yes" name="apple-mobile-web-app-capable">
-```
-
-- 改变顶部状态条的颜色 iphone 私有的属性
-
-```html
-<meta content="black" name="apple-mobile-web-app-status-bar-style">
-```
 
 　　以上为平时常用 mate 标签，有遗漏的地方在下面留言就OK，会不断更新... ...
