--- a/_posts/summarize/2017-02-04-css-font.md
+++ b/_posts/summarize/2017-02-04-css-font.md
@@ -9,7 +9,7 @@ tag: CSS
 * content
 {:toc}
 
-　　本文记录总结一些平时经常用的字体知识，方便查阅。（```font-family、font-size、font-weight```等。）<!-- more -->
+　　本文记录总结一些平时经常用的字体知识，方便查阅。（`font-family`、`font-size`、`font-weight`等。）<!-- more -->
 
 ## font-family
 
