--- a/_posts/summarize/2017-01-29-web-cache.md
+++ b/_posts/summarize/2017-01-29-web-cache.md
@@ -3,7 +3,7 @@ layout: post
 title: "理解 Web 缓存"
 date: 2017-01-29 15:41:15 +0800
 categories: 学习笔记
-tag: cache
+tag: Web
 ---
 
 * content
@@ -23,7 +23,7 @@ tag: cache
 
 　　随便以知乎的一张图片资源为例，我们可以打开 ```Chrome``` 的开发者工具中的 ```network```，随便找一个 200(from cache) 的资源，可以看到请求报文和响应报文的 ```Headers```。
 
-<img src="{{ '/styles/images/cache/cache_1.png' | prepend: site.baseurl }}" alt="Headers" />
+<img src="{{ '/styles/images/web/cache_1.png' | prepend: site.baseurl }}" alt="Headers" />
 
 ### cache-control 和 max-age
 
@@ -79,7 +79,7 @@ If-None-Match:"2afd9676ae9046ed99dedd4635bb6e4a-gzip"
 
 ### 一图胜千言
 
-<img src="{{ '/styles/images/cache/cache_2.png' | prepend: site.baseurl }}" alt="Cache" />
+<img src="{{ '/styles/images/web/cache_2.png' | prepend: site.baseurl }}" alt="Cache" />
 
 ## 总结
 
