--- a/_posts/useful/2017-02-03-js-effect.md
+++ b/_posts/useful/2017-02-03-js-effect.md
@@ -2,7 +2,7 @@
 layout: post
 title: "常用 JavaScript 效果"
 date: 2017-02-03 14:41:15 +0800
-categories: 学习笔记
+categories: 干货分享
 tag: JavaScript
 ---
 
