--- a/_posts/summarize/2017-01-14-js-IIFE.md
+++ b/_posts/summarize/2017-01-14-js-IIFE.md
@@ -9,11 +9,9 @@ tag: JavaScript
 * content
 {:toc}
 
+　　在 JavaScript 中，每一个函数在被调用的时候都会创建一个执行上下文，在该函数内部定义的变量和函数只能在该函数内部被使用，而正是因为这个上下文，使得我们在调用函数的时候能创建一些私有变量。
 
 　　**本文参考 [合理使用 IIFE 优化 JS 引擎的性能](https://zhuanlan.zhihu.com/p/23629542)、[详解javascript立即执行函数表达式（IIFE）](http://web.jobbole.com/82520/)。**<!-- more -->
-
-<br>
-
 
 ## 1. 立即执行函数（IIFE）
 
