--- a/_posts/summarize/2017-01-24-js-strict.md
+++ b/_posts/summarize/2017-01-24-js-strict.md
@@ -9,9 +9,9 @@ tag: JavaScript
 * content
 {:toc}
 
-　　本文转自 [阮一峰的网络日志](http://www.ruanyifeng.com/blog/) 的 [Javascript 严格模式详解](http://www.ruanyifeng.com/blog/2013/01/javascript_strict_mode.html) ，参考文档[Strict mode](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode#Changes_in_strict_mode)。<!-- more -->
+　　JavaScript 严格模式（strict mode）即在严格的条件下运行。
 
-<hr>
+　　本文转自 [阮一峰的网络日志](http://www.ruanyifeng.com/blog/) 的 [Javascript 严格模式详解](http://www.ruanyifeng.com/blog/2013/01/javascript_strict_mode.html) ，参考文档[Strict mode](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode#Changes_in_strict_mode)。<!-- more -->
 
 ## 1. 概述
 
@@ -44,9 +44,7 @@ tag: JavaScript
 
 ### 3.1 针对整个脚本文件
 
-　　将```"use strict"```放在脚本文件的第一行，则整个脚本都将以"严格模式"运行。如果这行语句不在第一行，则无效，整个脚本以"正常模式"运行。如果不同模式的代码文件合并成一个文件，这一点需要特别注意。
-
-(严格地说，只要前面不是产生实际运行结果的语句，"use strict"可以不在第一行，比如直接跟在一个空的分号后面。)
+　　将```"use strict"```放在脚本文件的第一行(之前有任何代码（包括一个空的分号）都不会启用严格模式)，则整个脚本都将以"严格模式"运行。如果这行语句不在第一行，则无效，整个脚本以"正常模式"运行。如果不同模式的代码文件合并成一个文件，这一点需要特别注意。
 
 ```html
 　<script>
