--- a/_posts/useful/2017-02-03-js-effect.md
+++ b/_posts/useful/2017-02-03-js-effect.md
@@ -474,5 +474,24 @@ $('#changeA').click(function () {
 });
 </script>
 ```
+## 9. 超出部分以省略号显示
+
+```html
+<p class="newsOver">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, animi beatae dicta dolorem excepturi facilis, illum maiores quia, repellat sit vero voluptate voluptates? Aspernatur et iusto, omnis qui quo velit.</p>
+
+
+<script>
+function cut(text) {
+    text.each(function(){
+        var maxwidth=55;//限制的字符数
+        if($(this).text().length>maxwidth){
+            $(this).text($(this).text().substring(0,maxwidth));
+            $(this).html($(this).html()+'... ...');
+        }
+    });
+}
+cut($('.newsOver'));
+</script>
+```
 
 　　**以上代码都是经本人亲自测试过的，不保证性能最佳，留着做个参考。**
