--- a/_posts/useful/2017-03-06-html-rem.md
+++ b/_posts/useful/2017-03-06-html-rem.md
@@ -94,7 +94,7 @@ flex(100, 1);
 　　假设你的效果图宽度是750，在这个效果图上可能有一个宽度为7rem（高清方案默认 1rem = 100px）的元素。我们知道，高清方案的特点就是几乎完美还原效果图，也就是说，你写了一个宽度为 7rem 的元素，那么在目前主流移动设备上都是7rem。然而，iphone 5 的宽度为640，也就是6.4rem。于是横向滚动条不可避免的出现了。
 　　怎么办呢？ 这是我目前推荐的比较安全的方式：**如果元素的宽度超过效果图宽度的一半（效果图宽为640或750），果断使用百分比宽度，或者flex布局。就像把等屏宽的图片宽度设为100%一样。**
 
-> **不是 1rem = 100px吗，为什么我的代码写了一个宽度为3rem的元素，在电脑端的谷歌浏览器上宽度只有150px?**
+> **3. 不是 1rem = 100px吗，为什么我的代码写了一个宽度为3rem的元素，在电脑端的谷歌浏览器上宽度只有150px?**
 
 　　先说高清方案代码，再次强调咱们的高清方案代码是根据设备的dpr动态设置html 的 font-size，
 - 如果dpr=1(如电脑端），则html的font-size为50px，也就是 1rem = 50px
@@ -106,7 +106,7 @@ flex(100, 1);
 
 　　然而极少情况下，有设计师将效果图宽定为 1242px，因为他手里只有一个 iphone 6 sp (dpr = 3)，设计完效果图刚好可以在他的 iphone 6 sp 里查看调整。一切完毕之后，他将这个效果图交给你来切图。由于这个效果图对应设备的 dpr=3,也就是1rem = 50 × 3 = 150px。所以如果你量取了一个宽度为 90px 的元素，它的css宽度应该为 90/150=0.6rem。因为咱们的高清方案默认 1rem=100px。所以为了还原效果图，你需要这样换算。当然，一个技巧就是你可以直接修改咱们的高清方案的默认设置。在代码的最后 你会看到 flex(100, 1) ，将其修改成 flex(150, 1)就不用那么麻烦的换算了，此时那个 90px 的直接写成 0.9rem 就可以了。
 
-> **高清方案在微信上，有时候字体会不受控制变的很大，怎么办？**
+> **4. 高清方案在微信上，有时候字体会不受控制变的很大，怎么办？**
 
 　　在 X5 新内核 Blink 中，在排版页面的时候，会主动对字体进行放大，会检测页面中的主字体，当某一块字体在我们的判定规则中，认为字号较小，并且是页面中的主要字体，就会采取主动放大的操作。然而这不是我们想要的，可以采取给最大高度解决。（经过项目实践，还是决定给 max-height 一个具体数值比较好，之前给的是 100% ，但有自身的局限性，比如 antd 的轮播组件在 max-height:100% 的情况下就不能正常显示。）
 
