--- a/_posts/useful/2017-03-06-html-rem.md
+++ b/_posts/useful/2017-03-06-html-rem.md
@@ -84,14 +84,18 @@ flex(100, 1);
 > **1. 为什么效果图是要640或者750的，我非得弄个666的不行吗？**
 
 　　老实说当然可以，不过为了规范，640或者750是相对合适的。
+
 　　拿Iphone 5s 举例，它的css像素宽度是320px，由于它的dpr=2，所以它的物理像素宽度为320 × 2 = 640px，这也就是为什么，你在5s上截了一张图，在电脑上打开，它的原始宽度是640px的原因。
+
 - 那 iphone 6 的截图宽度呢？ 375 × 2 = 750
 - 那 iphone 6 sp 的截图宽度呢？ 414 × 3 = 1242
+
 　　以此类推，你现在能明白效果图为什么一般是 640 ，750 甚至是 1242 的原因了么？（真没有歧视安卓机的意思。。。）
 
 > **2. 宽度用 rem 写的情况下， 在 iphone6 上没问题， 在 iphone5上会有横向滚动条，何解？**
 
 　　假设你的效果图宽度是750，在这个效果图上可能有一个宽度为7rem（高清方案默认 1rem = 100px）的元素。我们知道，高清方案的特点就是几乎完美还原效果图，也就是说，你写了一个宽度为 7rem 的元素，那么在目前主流移动设备上都是7rem。然而，iphone 5 的宽度为640，也就是6.4rem。于是横向滚动条不可避免的出现了。
+
 　　怎么办呢？ 这是我目前推荐的比较安全的方式：**如果元素的宽度超过效果图宽度的一半（效果图宽为640或750），果断使用百分比宽度，或者flex布局。就像把等屏宽的图片宽度设为100%一样。**
 
 > **3. 不是 1rem = 100px吗，为什么我的代码写了一个宽度为3rem的元素，在电脑端的谷歌浏览器上宽度只有150px?**
@@ -111,7 +115,7 @@ flex(100, 1);
 　　在 X5 新内核 Blink 中，在排版页面的时候，会主动对字体进行放大，会检测页面中的主字体，当某一块字体在我们的判定规则中，认为字号较小，并且是页面中的主要字体，就会采取主动放大的操作。然而这不是我们想要的，可以采取给最大高度解决。（经过项目实践，还是决定给 max-height 一个具体数值比较好，之前给的是 100% ，但有自身的局限性，比如 antd 的轮播组件在 max-height:100% 的情况下就不能正常显示。）
 
 ```css
-html,body.div,span,h1,h2,h3,h4,h5,h6,p,pre,a,blockquote,abbr,address,code,del,em,img,q,small,strong,sub,sup,var,b,i,dl,dt,dd,ul,ol,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,td,th{
+html,body,div,span,h1,h2,h3,h4,h5,h6,p,pre,a,blockquote,abbr,address,code,del,em,img,q,small,strong,sub,sup,var,b,i,dl,dt,dd,ul,ol,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,td,th{
     border:0 none;
     font-size:inherit;
     color:inherit;
@@ -123,4 +127,4 @@ html,body.div,span,h1,h2,h3,h4,h5,h6,p,pre,a,blockquote,abbr,address,code,del,em
 }
 ```
 
-　　（本文参考 [_minooo_ 的简书内容](http://www.jianshu.com/p/985d26b40199)）未完待续···
+　　（本文参考 [_minooo_ 的简书内容](http://www.jianshu.com/p/985d26b40199)）未完待续 ···
