--- a/_posts/useful/2017-03-06-html-rem.md
+++ b/_posts/useful/2017-03-06-html-rem.md
@@ -128,3 +128,5 @@ html,body,div,span,h1,h2,h3,h4,h5,h6,p,pre,a,blockquote,abbr,address,code,del,em
 ```
 
 　　（本文参考 [_minooo_ 的简书内容](http://www.jianshu.com/p/985d26b40199)）未完待续 ···
+
+　　学习资料：[移动端高清多屏适配的解决方案](http://div.io/topic/1092)
